Seed Sept/Oct 2026 USMNT friendlies and extend schedule API with fixtures
